Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18177

Galera test failure on galera_autoinc_sst_mariabackup

    XMLWordPrintable

Details

    Description

      galera.galera_autoinc_sst_mariabackup 'innodb' w8 [ fail ]
              Test ended at 2019-01-09 09:09:13
       
      CURRENT_TEST: galera.galera_autoinc_sst_mariabackup
      mysqltest: In included file "./include/galera_wait_ready.inc": 
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/include/start_mysqld.inc at line 16:
      included from /home/jan/mysql/10.4-galera-2/mysql-test/suite/galera/t/galera_autoinc_sst_mariabackup.test at line 50:
      At line 28: "Server did not transition to READY state"
       
      The result from queries just before the failure was:
      < snip >
      connection node_1;
      connection node_1;
      connection node_2;
      connection node_1;
      CREATE TABLE t1 (f1 INTEGER PRIMARY KEY AUTO_INCREMENT) ENGINE=InnoDB;
      CREATE PROCEDURE p1 ()
      BEGIN
      DECLARE x INT DEFAULT 1;
      DECLARE CONTINUE HANDLER FOR SQLEXCEPTION BEGIN END;
      WHILE 1 DO
      INSERT INTO t1 VALUES (DEFAULT);
      COMMIT;
      END WHILE;
      END|
      CALL p1();;
      connection node_2;
      CALL p1();;
      connect node_2a, 127.0.0.1, root, , test, $NODE_MYPORT_2;
      connection node_2a;
      Killing server ...
       
      More results from queries before failure can be found in /home/jan/mysql/10.4-galera-2/mysql-test/var/8/log/galera_autoinc_sst_mariabackup.log
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1.5h
                  1d 1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.