MDEV-18177 mariabackup SST fixes

Implemented wsrep server_service interface method to read the position
from stable storage and removed the GTID dependency from server_state
sst_received() method. The GTID to be passed to wsrep provider after
SST is now read through server_service interface from wsrep-lib side
once the server shifts to initialized state.

Fixed Wsrep_server_service::log_view() to deal with cluster
UUID changes. Fixed trx_rseg_update_wsrep_checkpoint() to clear
rollback segments properly when the UUID changes.